# pyfln

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
pyfln/: __init__.py  bccutils.py  pyfln.py
pyfln.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: CMakeLists.txt  LICENSE  pyfln.cpp
tests/: test.py
